manifests/overlays/dev/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: react
        image: mycompany/react-app:dev
